# alpha-option-skill

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
alpha_option_skill/: __init__.py  __main__.py  cli.py
alpha_option_skill/brokers/: __init__.py  base.py  moomoo.py  robinhood.py
alpha_option_skill/data/: __init__.py  records.py  schema.py  sources.py  store.py
references/: authentication.md
tests/: test_brokers.py
