[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-option-skill"
version = "0.1.0"
description = "Options trading research and broker connector scaffolding for Alpha."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
moomoo = ["moomoo-api>=10.6.6608"]
dev = []

[project.scripts]
alpha = "alpha_option_skill.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_option_skill*"]
